--- a/style.css
+++ b/style.css
@@ -16,29 +16,30 @@ main {
     background-color: rgb(104, 99, 93);
     flex: 3;
 }
-.base {
-    display: flex;
-    background-color: rgb(104, 99, 93);
-    justify-content: space-evenly;
-    align-items: flex-start;
-    margin: 20px;
-    flex-wrap: wrap;
-    flex: 1;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 .card {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    background-color: azure;
+    background-color: rgb(13, 131, 131);
     border-radius: 10px;
+    padding-top: 40px;
+    padding-bottom: 80px;
     margin: 50px;
-    min-height: 300px;
-    min-width: 200px;
+    min-height: 468px;
+    min-width: 300px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vh;
+    font-weight: 600;
+}
+
+p .weatherEmoji {
+    font-size: large;
+    font-weight: bold;
 }
 .top {
-    background-color: rgb(5, 110, 110);
+    background-color: rgb(13, 131, 131);
     display: flex;
     justify-content: space-around;
     align-items: baseline;
@@ -52,7 +53,7 @@ main {
     top: 0; 
     left: 0;
     flex: 1;
-    background-color: rgb(5, 110, 110);
+    background-color: rgb(13, 131, 131);
     overflow-x: hidden; 
     padding: 20px;
     display: flex;
@@ -68,13 +69,10 @@ main {
     justify-content: stretch;
     align-items: stretch;
 }
-.active {
-    background-color: red;
+form {
+    background-color: rgb(104, 99, 93);
+    border-radius: 5px;
 }
-
-
-
-
 
 
 
